# claudometer

./: .gitignore  AGENTS.md  CCTaskBarUsage.slnx  CLAUDE.md  Cargo.toml  README.md  build.rs
.github/: codeowners
.github/workflows/: ci.yml  release-installer.yml
CCTaskBarUsage/: CCTaskBarUsage.cpp  CCTaskBarUsage.rc  CCTaskBarUsage.vcxproj  CCTaskBarUsage.vcxproj.filters  Resource.h
installer/: claudometer.iss
resources/: app.manifest  app.rc  resource.h
src/: app.rs  credentials.rs  diagnostics.rs  drawing.rs  main.rs  taskbar.rs  tray.rs  updates.rs  usage.rs  widget.rs  winstr.rs
