[package]
name = "claudometer"
version = "1.1.2"
edition = "2021"
build = "build.rs"

[dependencies]
once_cell = "1.19"
serde_json = "1.0"
ureq = { version = "2.12", default-features = false, features = ["native-tls"] }
windows = { version = "0.58", features = [
    "Foundation_Numerics",
    "Win32_Foundation",
    "Win32_Graphics_Direct2D",
    "Win32_Graphics_Direct2D_Common",
    "Win32_Graphics_DirectWrite",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_System_Environment",
    "Win32_System_Registry",
    "Win32_System_SystemInformation",
    "Win32_System_StationsAndDesktops",
    "Win32_System_LibraryLoader",
    "Win32_System_RemoteDesktop",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }

[build-dependencies]
embed-resource = "2.5"

[profile.release]
lto = true
strip = true
codegen-units = 1
